// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cli --config 1`] = `
"import React from 'react';

const One = props => (
  <svg viewBox=\\"0 0 48 1\\" width=\\"1em\\" height=\\"1em\\" {...props}>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"currentColor\\" fillRule=\\"evenodd\\" />
  </svg>
);

export default One;

"
`;

exports[`cli --icon 1`] = `
"import React from 'react';

const One = props => (
  <svg viewBox=\\"0 0 48 1\\" width=\\"1em\\" height=\\"1em\\" {...props}>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
);

export default One;

"
`;

exports[`cli --ids 1`] = `
"import React from 'react';

const One = props => (
  <svg width={48} height={1} viewBox=\\"0 0 48 1\\" {...props}>
    <title>Rectangle 5</title>
    <g id=\\"Page-1\\" fill=\\"none\\" fillRule=\\"evenodd\\">
      <g id=\\"19-Separator\\" transform=\\"translate(-129 -156)\\" fill=\\"#063855\\">
        <g id=\\"Controls/Settings\\" transform=\\"translate(80)\\">
          <g id=\\"Content\\" transform=\\"translate(0 64)\\">
            <g id=\\"Group\\" transform=\\"translate(24 56)\\">
              <g id=\\"Group-2\\">
                <path id=\\"Rectangle-5\\" d=\\"M25 36h48v1H25z\\" />
              </g>
            </g>
          </g>
        </g>
      </g>
    </g>
  </svg>
);

export default One;

"
`;

exports[`cli --jsx-bracket-same-line 1`] = `
"import React from 'react';

const One = props => (
  <svg width={48} height={1} viewBox=\\"0 0 48 1\\" {...props}>
    <title>Rectangle 5</title>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
);

export default One;

"
`;

exports[`cli --keep-useless-defs 1`] = `
"import React from 'react';

const One = props => (
  <svg width={48} height={1} viewBox=\\"0 0 48 1\\" {...props}>
    <title>Rectangle 5</title>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
);

export default One;

"
`;

exports[`cli --native 1`] = `
"import React from 'react';
import Svg, { Path } from 'react-native-svg';

// SVGR has dropped some elements not supported by react-native-svg: title

const One = props => (
  <Svg width={48} height={1} viewBox=\\"0 0 48 1\\" {...props}>
    <Path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </Svg>
);

export default One;

"
`;

exports[`cli --no-bracket-spacing 1`] = `
"import React from 'react';

const One = props => (
  <svg width={48} height={1} viewBox=\\"0 0 48 1\\" {...props}>
    <title>Rectangle 5</title>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
);

export default One;

"
`;

exports[`cli --no-dimensions --no-view-box 1`] = `
"import React from 'react';

const One = props => (
  <svg {...props}>
    <title>Rectangle 5</title>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
);

export default One;

"
`;

exports[`cli --no-dimensions 1`] = `
"import React from 'react';

const One = props => (
  <svg viewBox=\\"0 0 48 1\\" {...props}>
    <title>Rectangle 5</title>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
);

export default One;

"
`;

exports[`cli --no-expand-props 1`] = `
"import React from 'react';

const One = () => (
  <svg width={48} height={1} viewBox=\\"0 0 48 1\\">
    <title>Rectangle 5</title>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
);

export default One;

"
`;

exports[`cli --no-prettier 1`] = `
"import React from 'react'

const One = (props) => <svg width={48} height={1} viewBox=\\"0 0 48 1\\" {...props}>
  <title>
    Rectangle 5
  </title>
  <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
</svg>


export default One
"
`;

exports[`cli --no-semi 1`] = `
"import React from 'react'

const One = props => (
  <svg width={48} height={1} viewBox=\\"0 0 48 1\\" {...props}>
    <title>Rectangle 5</title>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
)

export default One

"
`;

exports[`cli --no-svgo 1`] = `
"import React from 'react';

const One = props => (
  <svg
    width=\\"48px\\"
    height=\\"1px\\"
    viewBox=\\"0 0 48 1\\"
    version={1.1}
    xmlnsXlink=\\"http://www.w3.org/1999/xlink\\"
    {...props}
  >
    <title>Rectangle 5</title>
    <desc>Created with Sketch.</desc>
    <defs />
    <g id=\\"Page-1\\" stroke=\\"none\\" strokeWidth={1} fill=\\"none\\" fillRule=\\"evenodd\\">
      <g
        id=\\"19-Separator\\"
        transform=\\"translate(-129.000000, -156.000000)\\"
        fill=\\"#063855\\"
      >
        <g id=\\"Controls/Settings\\" transform=\\"translate(80.000000, 0.000000)\\">
          <g id=\\"Content\\" transform=\\"translate(0.000000, 64.000000)\\">
            <g id=\\"Group\\" transform=\\"translate(24.000000, 56.000000)\\">
              <g id=\\"Group-2\\">
                <rect id=\\"Rectangle-5\\" x={25} y={36} width={48} height={1} />
              </g>
            </g>
          </g>
        </g>
      </g>
    </g>
  </svg>
);

export default One;

"
`;

exports[`cli --no-title 1`] = `
"import React from 'react';

const One = props => (
  <svg width={48} height={1} viewBox=\\"0 0 48 1\\" {...props}>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
);

export default One;

"
`;

exports[`cli --no-view-box 1`] = `
"import React from 'react';

const One = props => (
  <svg width={48} height={1} {...props}>
    <title>Rectangle 5</title>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
);

export default One;

"
`;

exports[`cli --out-dir 1`] = `
"import React from 'react';

const One = props => (
  <svg width={48} height={1} viewBox=\\"0 0 48 1\\" {...props}>
    <title>Rectangle 5</title>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
);

export default One;
"
`;

exports[`cli --out-dir 2`] = `
"import React from 'react';

const Two = props => (
  <svg width={48} height={11} viewBox=\\"0 0 48 11\\" {...props}>
    <title>Group 6</title>
    <g stroke=\\"#063855\\" fill=\\"none\\" fillRule=\\"evenodd\\">
      <path d=\\"M0 7l5.317-2.658a6 6 0 0 1 5.366 0l2.634 1.316a6 6 0 0 0 5.366 0l2.634-1.316a6 6 0 0 1 5.366 0l2.634 1.316a6 6 0 0 0 5.366 0l2.634-1.316a6 6 0 0 1 5.366 0L48 7\\" />
      <path d=\\"M0 10l5.317-2.658a6 6 0 0 1 5.366 0l2.634 1.316a6 6 0 0 0 5.366 0l2.634-1.316a6 6 0 0 1 5.366 0l2.634 1.316a6 6 0 0 0 5.366 0l2.634-1.316a6 6 0 0 1 5.366 0L48 10M0 4l5.317-2.658a6 6 0 0 1 5.366 0l2.634 1.316a6 6 0 0 0 5.366 0l2.634-1.316a6 6 0 0 1 5.366 0l2.634 1.316a6 6 0 0 0 5.366 0l2.634-1.316a6 6 0 0 1 5.366 0L48 4\\" />
    </g>
  </svg>
);

export default Two;
"
`;

exports[`cli --precision 1`] = `
"import React from 'react';

const One = props => (
  <svg width={48} height={1} viewBox=\\"0 0 48 1\\" {...props}>
    <title>Rectangle 5</title>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
);

export default One;

"
`;

exports[`cli --ref --no-expand-props 1`] = `
"import React from 'react';

const One = ({ svgRef }) => (
  <svg width={48} height={1} viewBox=\\"0 0 48 1\\" ref={svgRef}>
    <title>Rectangle 5</title>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
);

export default One;

"
`;

exports[`cli --ref 1`] = `
"import React from 'react';

const One = ({ svgRef, ...props }) => (
  <svg width={48} height={1} viewBox=\\"0 0 48 1\\" ref={svgRef} {...props}>
    <title>Rectangle 5</title>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
);

export default One;

"
`;

exports[`cli --replace-attr-value 1`] = `
"import React from 'react';

const One = props => (
  <svg width={48} height={1} viewBox=\\"0 0 48 1\\" {...props}>
    <title>Rectangle 5</title>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"currentColor\\" fillRule=\\"evenodd\\" />
  </svg>
);

export default One;

"
`;

exports[`cli --single-quote 1`] = `
"import React from 'react';

const One = props => (
  <svg width={48} height={1} viewBox=\\"0 0 48 1\\" {...props}>
    <title>Rectangle 5</title>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
);

export default One;

"
`;

exports[`cli --svg-attributes 1`] = `
"import React from 'react';

const One = props => (
  <svg
    focusable=\\"false\\"
    hidden=\\"0\\"
    width={48}
    height={1}
    viewBox=\\"0 0 48 1\\"
    {...props}
  >
    <title>Rectangle 5</title>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
);

export default One;

"
`;

exports[`cli --tab-width 1`] = `
"import React from 'react';

const One = props => (
    <svg width={48} height={1} viewBox=\\"0 0 48 1\\" {...props}>
        <title>Rectangle 5</title>
        <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
    </svg>
);

export default One;

"
`;

exports[`cli --template 1`] = `
"import React from 'react';

export default function One() {
  return (
    <svg width={48} height={1} viewBox=\\"0 0 48 1\\" {...props}>
      <title>Rectangle 5</title>
      <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
    </svg>
  );
}

"
`;

exports[`cli --title-prop 1`] = `
"import React from 'react';

const One = ({ title, ...props }) => (
  <svg width={48} height={1} viewBox=\\"0 0 48 1\\" {...props}>
    <title>{title}</title>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
);

export default One;

"
`;

exports[`cli --trailing-comma all 1`] = `
"import React from 'react';

const One = props => (
  <svg width={48} height={1} viewBox=\\"0 0 48 1\\" {...props}>
    <title>Rectangle 5</title>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
);

export default One;

"
`;

exports[`cli --trailing-comma es5 1`] = `
"import React from 'react';

const One = props => (
  <svg width={48} height={1} viewBox=\\"0 0 48 1\\" {...props}>
    <title>Rectangle 5</title>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
);

export default One;

"
`;

exports[`cli --trailing-comma none 1`] = `
"import React from 'react';

const One = props => (
  <svg width={48} height={1} viewBox=\\"0 0 48 1\\" {...props}>
    <title>Rectangle 5</title>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
);

export default One;

"
`;

exports[`cli --use-tabs 1`] = `
"import React from 'react';

const One = props => (
	<svg width={48} height={1} viewBox=\\"0 0 48 1\\" {...props}>
		<title>Rectangle 5</title>
		<path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
	</svg>
);

export default One;

"
`;

exports[`cli should work with a simple file 1`] = `
"import React from 'react';

const One = props => (
  <svg width={48} height={1} viewBox=\\"0 0 48 1\\" {...props}>
    <title>Rectangle 5</title>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
);

export default One;

"
`;

exports[`cli should work with stdin 1`] = `
"import React from 'react';

const SvgComponent = props => (
  <svg width={48} height={1} viewBox=\\"0 0 48 1\\" {...props}>
    <title>Rectangle 5</title>
    <path d=\\"M0 0h48v1H0z\\" fill=\\"#063855\\" fillRule=\\"evenodd\\" />
  </svg>
);

export default SvgComponent;

"
`;
